--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -65,27 +65,26 @@
             
 
             <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-                
+                <button data-toggle="collapse" data-target="#exam" class="btn btn-info mt-5" role="button" style="width:100%">Start Exam</button>
                 <div id="exam" class="collapse">
                     {% if user.is_authenticated %}
-                    <button data-toggle="collapse" data-target="#exam" class="btn btn-info" role="button" style="width:100%">Start Exam</button>
+                    
                         <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
                             
                              {% for question in course.question_set.all %}
-                             <h5>holisss</h5>
-                            <div class="card mt-1">
+                             
+                            <div class="card mt-3">
                                 <div class="card-header">
-                                    <h5>{{question.title}}</h5>
-                                </div>
+                                    <h5>{{question.question_text}}</h5></div>
                                 {% csrf_token %}
-                                <b>{{question.text}}</b><br/>
+                                
                                 <div class="form-group">
                                     {% for choice in question.choice_set.all %}
                                         <div class="form-check">
                                             <label class="form-check-label">
                                                 <input type="checkbox" name="choice_{{choice.id}}"
                                                     class="form-check-input" id="{{choice.id}}"
-                                                    value="{{choice.id}}">{{ choice.text }}
+                                                    value="{{choice.id}}">{{ choice.choice_text }}
                                             </label>
                                         </div>
                                     {% endfor %}
